--- a/app/index.html
+++ b/app/index.html
@@ -11,14 +11,19 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=3.10">
+	<link rel="stylesheet" href="title.styles.css?v=3.12">
+
+	<meta property="og:title" content="Строительство домов в Хабаровске"/>
+	<meta property="og:description" content="Каменные тёплые дома по цене квартиры - от 2,95 млн. руб. Дом под ключ за 3 месяца. Заводское качество домов и гарантия 50 лет. Ипотека от 1,3%."/>
+	<meta property="og:url" content="https://kpd100zavod.ru"/>
+	<meta property="og:image" content="https://kpd100zavod.ru/img/houses-top-image.jpg">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.10">
+	<link rel="stylesheet" href="css/main.min.css?v=3.12">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.10"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.12"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -48,7 +53,7 @@
 
 <body>
 
-	<div class="sticky-button sticky-block">
+	<!-- <div class="sticky-button sticky-block">
 		<div class="circle-phone">
 			<a href="https://albank.ru/ru/mortgages/" target="_blank"><img class="img-responsive" src="img/bank-almazenergo.svg" title="Алмазэргиэнбанк" alt="logo"></a>
 			<a href="https://www.sberbank.ru/ru/person/credits/home/buying_complete_house_daln?tab=usl" target="_blank"><img class="img-responsive" src="img/bank-sber.svg" title="Сбербанк" alt="logo"></a>
@@ -57,7 +62,7 @@
 		</div>
 		<div class="circle first"></div>
 		<div class="circle second"></div>
-	</div>
+	</div> -->
 
 	<a href="https://www.instagram.com/kpd100zavod.ru/" target="_blank" class="sticky-button instagram">
 		<div class="circle-phone">
@@ -558,7 +563,7 @@
 								</div>
 
 								<div class="button-container">
-									<a class="open-form-button center-button" href="#take-2_4th_roof"><span>Заказать Одноэтажный дом с четырехскатной кровлей</span></a>
+									<a class="open-form-button center-button" href="#take-2_4th_roof"><span>Узнать подробнее</span></a>
 								</div>
 
 							</div>
@@ -707,7 +712,7 @@
 								</div>
 
 								<div class="button-container">
-									<a class="open-form-button center-button" href="#take-people-house"><span>Заказать Мансардный дом</span></a>
+									<a class="open-form-button center-button" href="#take-people-house"><span>Узнать подробнее</span></a>
 								</div>
 								
 							</div>
@@ -973,7 +978,7 @@
 								</div>
 
 								<div class="button-container">
-									<a class="open-form-button center-button" href="#take-classic-house"><span>Заказать дом "Классика"</span></a>
+									<a class="open-form-button center-button" href="#take-classic-house"><span>Узнать подробнее</span></a>
 								</div>
 
 							</div>
@@ -1062,7 +1067,7 @@
 								</div>
 
 								<div class="button-container">
-									<a class="open-form-button center-button" href="#take-classic-w-garage-house"><span>Заказать дом "Классика с гаражом"</span></a>
+									<a class="open-form-button center-button" href="#take-classic-w-garage-house"><span>Узнать подробнее</span></a>
 								</div>
 
 							</div>
@@ -1115,7 +1120,7 @@
 
 								<h2 class="next-h">Пирог кровли</h2>
 
-								<div class="item">
+								<div class="item roofing-cake-item">
 									<a class="image fancybox" href="img/roofing-cake.jpg">
 										<div class="item-label"></div>
 										<img src="img/roofing-cake.jpg" alt="Пирог кровли">
@@ -1264,7 +1269,7 @@
 											<img src="img/houses/service-4.jpg" alt="service-img" class="img-responsive">
 											<div class="text">
 												<p><span><b><span>Ипотека</span></b></span></p>
-												<p>Если для приобретения дома Вам нужен ипотечный кредит - наш ипотечный эксперт бесплатно оформит его Вам на самых выгодных условиях</p>
+												<p>Если для приобретения дома Вам нужен ипотечный кредит - наш ипотечный эксперт бесплатно поможет оформить его Вам на самых выгодных условиях</p>
 											</div>
 										</a>
 									</li>
@@ -1445,15 +1450,14 @@
 			<div class="success">
 				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
 			</div>
-			<p>Оставьте заявку на <br>Одноэтажный дом с двускатной кровлей <br>и наш менеджер свяжется с вами</p>
+			<p>Оставьте свои контакты <br>Наш консультант свяжется с вами <br>и ответит на все вопросы</p>
 			<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="КПД-100">
 			<input type="hidden" name="form_subject" value="КПД-100 | заявка на Одноэтажный дом с двускатной кровлей">
 			<!-- END Hidden Required Fields -->
 			<div class="inputs">
-				<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-				<input class="input" type="text" name="email" placeholder="E-mail" required>
+				<input class="input" type="text" name="Имя" placeholder="Как к вам обращаться?" required>
+				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона (чтобы мы могли вам перезвонить)" required>
 			</div>
 			<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
 			<div class="confirm">
@@ -1468,15 +1472,14 @@
 			<div class="success">
 				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
 			</div>
-			<p>Оставьте заявку на <br>Одноэтажный дом с четырехскатной кровлей <br>и наш менеджер свяжется с вами</p>
+			<p>Оставьте свои контакты <br>Наш консультант свяжется с вами <br>и ответит на все вопросы</p>
 			<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="КПД-100">
 			<input type="hidden" name="form_subject" value="КПД-100 | заявка на Одноэтажный дом с четырехскатной кровлей">
 			<!-- END Hidden Required Fields -->
 			<div class="inputs">
-				<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-				<input class="input" type="text" name="email" placeholder="E-mail" required>
+				<input class="input" type="text" name="Имя" placeholder="Как к вам обращаться?" required>
+				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона (чтобы мы могли вам перезвонить)" required>
 			</div>
 			<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
 			<div class="confirm">
@@ -1491,15 +1494,14 @@
 			<div class="success">
 				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
 			</div>
-			<p>Оставьте заявку на <br>Мансардный дом<br> и наш менеджер свяжется с вами</p>
+			<p>Оставьте свои контакты <br>Наш консультант свяжется с вами <br>и ответит на все вопросы</p>
 			<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="КПД-100">
 			<input type="hidden" name="form_subject" value="КПД-100 | заявка на Мансардный дом">
 			<!-- END Hidden Required Fields -->
 			<div class="inputs">
-				<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-				<input class="input" type="text" name="email" placeholder="E-mail" required>
+				<input class="input" type="text" name="Имя" placeholder="Как к вам обращаться?" required>
+				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона (чтобы мы могли вам перезвонить)" required>
 			</div>
 			<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
 			<div class="confirm">
@@ -1514,15 +1516,14 @@
 			<div class="success">
 				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
 			</div>
-			<p>Оставьте заявку на <br>"Народный" дом с двускатной кровлей <br>и наш менеджер свяжется с вами</p>
+			<p>Оставьте свои контакты <br>Наш консультант свяжется с вами <br>и ответит на все вопросы</p>
 			<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="КПД-100">
 			<input type="hidden" name="form_subject" value="КПД-100 | заявка на 'Народный' дом с двускатной кровлей">
 			<!-- END Hidden Required Fields -->
 			<div class="inputs">
-				<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-				<input class="input" type="text" name="email" placeholder="E-mail" required>
+				<input class="input" type="text" name="Имя" placeholder="Как к вам обращаться?" required>
+				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона (чтобы мы могли вам перезвонить)" required>
 			</div>
 			<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
 			<div class="confirm">
@@ -1537,15 +1538,14 @@
 			<div class="success">
 				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
 			</div>
-			<p>Оставьте заявку на дом "Классика" <br>и наш менеджер свяжется с вами</p>
+			<p>Оставьте свои контакты <br>Наш консультант свяжется с вами <br>и ответит на все вопросы</p>
 			<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="КПД-100">
 			<input type="hidden" name="form_subject" value="КПД-100 | заявка на дом 'Классика'">
 			<!-- END Hidden Required Fields -->
 			<div class="inputs">
-				<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-				<input class="input" type="text" name="email" placeholder="E-mail" required>
+				<input class="input" type="text" name="Имя" placeholder="Как к вам обращаться?" required>
+				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона (чтобы мы могли вам перезвонить)" required>
 			</div>
 			<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
 			<div class="confirm">
@@ -1560,15 +1560,36 @@
 			<div class="success">
 				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
 			</div>
-			<p>Оставьте заявку на дом "Классика с гаражом" <br>и наш менеджер свяжется с вами</p>
+			<p>Оставьте свои контакты <br>Наш консультант свяжется с вами <br>и ответит на все вопросы</p>
 			<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="КПД-100">
 			<input type="hidden" name="form_subject" value="КПД-100 | заявка на дом 'Классика с гаражом'">
 			<!-- END Hidden Required Fields -->
 			<div class="inputs">
-				<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-				<input class="input" type="text" name="email" placeholder="E-mail" required>
+				<input class="input" type="text" name="Имя" placeholder="Как к вам обращаться?" required>
+				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона (чтобы мы могли вам перезвонить)" required>
+			</div>
+			<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
+			<div class="confirm">
+				<input class="checkbox" type="checkbox" checked required />
+				<p class="personal-data">Нажимая на кнопку, я даю свое согласие на обработку <br>персональных данных и соглашаюсь с условиями <br>политики конфиденциальности</p>
+			</div>
+		</form>
+
+
+
+		<form class="popup-form zoom-anim-dialog form white-bg" id="take-info" onsubmit="">
+			<div class="success">
+				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
+			</div>
+			<p>Оставьте свои контакты <br>Наш консультант свяжется с вами <br>и ответит на все вопросы</p>
+			<!-- Hidden Required Fields -->
+			<input type="hidden" name="project_name" value="КПД-100">
+			<input type="hidden" name="form_subject" value="КПД-100 | заявка на дом подробную информацию о ипотеке">
+			<!-- END Hidden Required Fields -->
+			<div class="inputs">
+				<input class="input" type="text" name="Имя" placeholder="Как к вам обращаться?" required>
+				<input class="input phone" type="text" name="Телефон" placeholder="Номер телефона (чтобы мы могли вам перезвонить)" required>
 			</div>
 			<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
 			<div class="confirm">
@@ -1582,6 +1603,14 @@
 		<div id="take-consultation" class="text-popup-window zoom-anim-dialog">
 
 			<div>
+
+				<div class="link-block">
+					<a href="https://www.sberbank.ru/ru/person/credits/home/buying_complete_house_daln?tab=usl" target="_blank"><img class="img-responsive" src="img/bank-sber.svg" title="Сбербанк" alt="logo"><p>Ипотека от 1,3%</p></a>
+					<a href="https://svoedom.ru/rural_mortgage/?utm_source=kpd100zavod_ru&utm_medium=podryadchik&utm_campaign=partnery_svoyo_zhilyo&utm_content=banner&utm_term=khabarovsk%7C19_01_2021" target="_blank"><img class="img-responsive" src="img/bank-svoedom.svg" title="Россельхзбанк" alt="logo"><p>Ипотека от 2,7%</p></a>
+					<a href="https://www.pochtabank.ru/service/bistr_doma" target="_blank"><img class="img-responsive" src="img/bank-pochta.svg" title="Почтабанк" alt="logo"><p>Ипотека от 4,9%</p></a>
+					<a href="https://albank.ru/ru/mortgages/" target="_blank"><img class="img-responsive" src="img/bank-almazenergo.svg" title="Алмазэргиэнбанк" alt="logo"><p>Ипотека от 1,7%</p></a>
+				</div>
+
 				<h3>Сенсация для молодых семей! (возраст до 36 лет)</h3>
 				<h3>Теперь вы можете построить свой дом в ипотеку от 1,3% БЕЗ ЗАЛОГА!!!</h3>
 				<p>За период действия ДВ ипотеки огромное количество молодых семей обращались к нам за строительством дома, но банки требовали залог в виде недвижимости (квартиры), причем залог должен был быть выше суммы кредита.</p>
@@ -1644,7 +1673,8 @@
 				<p><b>Поскольку строительство дома по данной программе осуществляется за счет средств Подрядной организации – количество заявок в месяц – ограничено.</b></p>
 				<p><b>У вас нет земельного участка?</b></p>
 				<p>Мы поможем купить его и включить в стоимость ипотечного кредита!</p>
-				<img src="img/mortgage.jpg" alt="ипотека" class="img-responsive">
+				<h3>Ипотека от 4,9% на СТРОИТЕЛЬСТВО или ГОТОВЫЙ ДОМ в городе или сельской местности</h3>
+				<!-- <img src="img/mortgage.jpg" alt="ипотека" class="img-responsive"> -->
 				<p>Наш партнёр Почта Банк поможет оформить кредит на покупку загородного дома на сумму до 3 млн ₽.</p>
 				<p>Получение кредита займет не более 30 минут.</p>
 				<p>Банк подберёт для вас удобную кредитную программу на срок до 5 лет по ставке от 4,9% годовых и рассчитает комфортные ежемесячные платежи.</p>
@@ -1655,8 +1685,11 @@
 					<li>СНИЛС;</li>
 					<li>мобильный телефон.</li>
 				</ul>
+				<p>Наш ипотечный специалист бесплатно поможет вам в оформлении ипотеки.</p>
 			</div>
-
+			<div class="button-container">
+				<a class="open-form-button take-info center-button" href="#take-info"><span>Узнать подробнее</span></a>
+			</div>
 		</div>
 	</div>
 
