--- a/app/kontakty.html
+++ b/app/kontakty.html
@@ -13,14 +13,19 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=3.5">
+	<link rel="stylesheet" href="title.styles.css?v=3.6">
+
+	<meta property="og:title" content="Строительство домов в Хабаровске"/>
+	<meta property="og:description" content="Каменные тёплые дома по цене квартиры - от 2,95 млн. руб. Дом под ключ за 3 месяца. Заводское качество домов и гарантия 50 лет. Ипотека от 1,3%."/>
+	<meta property="og:url" content="https://kpd100zavod.ru"/>
+	<meta property="og:image" content="https://kpd100zavod.ru/img/houses-top-image.jpg">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.5">
+	<link rel="stylesheet" href="css/main.min.css?v=3.6">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.5"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.6"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -50,7 +55,7 @@
 
 <body>
 
-	<div class="sticky-button sticky-block">
+	<!-- <div class="sticky-button sticky-block">
 		<div class="circle-phone">
 			<a href="https://albank.ru/ru/mortgages/" target="_blank"><img class="img-responsive" src="img/bank-almazenergo.svg" title="Алмазэргиэнбанк" alt="logo"></a>
 			<a href="https://www.sberbank.ru/ru/person/credits/home/buying_complete_house_daln?tab=usl" target="_blank"><img class="img-responsive" src="img/bank-sber.svg" title="Сбербанк" alt="logo"></a>
@@ -59,7 +64,7 @@
 		</div>
 		<div class="circle first"></div>
 		<div class="circle second"></div>
-	</div>
+	</div> -->
 
 	<a href="https://www.instagram.com/kpd100zavod.ru/" target="_blank" class="sticky-button instagram">
 		<div class="circle-phone">
