--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="Строительство домов в Хабаровске. Если Вам нужно качественно, быстро и по разумной цене построить дом под ключ и гарантией на наши дома от 50 лет. Строительная компания КПД-100 Завод домокомплектов предлагает для Вас дома от 2,1 млн руб!">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="yandex-verification" content="3b96c8f18808642f" />
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<link rel="stylesheet" href="title.styles.css?v=3.12">
@@ -19,11 +20,11 @@
 	<meta property="og:image" content="https://kpd100zavod.ru/img/houses-top-image.jpg">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.12">
+	<link rel="stylesheet" href="css/main.min.css?v=3.13">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.12"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.13"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -118,7 +119,7 @@
 								<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные поселки</span></a>
 									<ul>
 										<li><a href="https://семейный-дв.рф" target="_blank" rel="nofollow">Семейный</a></li>
-										<li><a href="https://экопаркюг.рф" target="_blank" rel="nofollow">Экопарк Юг</a></li>
+										<!-- <li><a href="https://экопаркюг.рф" target="_blank" rel="nofollow">Экопарк Юг</a></li> -->
 										<li><a href="https://экопарксевер.рф" target="_blank" rel="nofollow">Экопарк Север</a></li>
 									</ul>
 								</li>
@@ -1605,10 +1606,10 @@
 			<div>
 
 				<div class="link-block">
-					<a href="https://www.sberbank.ru/ru/person/credits/home/buying_complete_house_daln?tab=usl" target="_blank"><img class="img-responsive" src="img/bank-sber.svg" title="Сбербанк" alt="logo"><p>Ипотека от 1,3%</p></a>
-					<a href="https://svoedom.ru/rural_mortgage/?utm_source=kpd100zavod_ru&utm_medium=podryadchik&utm_campaign=partnery_svoyo_zhilyo&utm_content=banner&utm_term=khabarovsk%7C19_01_2021" target="_blank"><img class="img-responsive" src="img/bank-svoedom.svg" title="Россельхзбанк" alt="logo"><p>Ипотека от 2,7%</p></a>
-					<a href="https://www.pochtabank.ru/service/bistr_doma" target="_blank"><img class="img-responsive" src="img/bank-pochta.svg" title="Почтабанк" alt="logo"><p>Ипотека от 4,9%</p></a>
-					<a href="https://albank.ru/ru/mortgages/" target="_blank"><img class="img-responsive" src="img/bank-almazenergo.svg" title="Алмазэргиэнбанк" alt="logo"><p>Ипотека от 1,7%</p></a>
+					<div><img class="img-responsive" src="img/bank-sber.svg" title="Сбербанк" alt="logo"><p>Ипотека от 1,3%</p></div>
+					<div><img class="img-responsive" src="img/bank-svoedom.svg" title="Россельхзбанк" alt="logo"><p>Ипотека от 2,7%</p></div>
+					<div><img class="img-responsive" src="img/bank-pochta.svg" title="Почтабанк" alt="logo"><p>Ипотека от 4,9%</p></div>
+					<div><img class="img-responsive" src="img/bank-almazenergo.svg" title="Алмазэргиэнбанк" alt="logo"><p>Ипотека от 1,7%</p></div>
 				</div>
 
 				<h3>Сенсация для молодых семей! (возраст до 36 лет)</h3>
@@ -1687,9 +1688,9 @@
 				</ul>
 				<p>Наш ипотечный специалист бесплатно поможет вам в оформлении ипотеки.</p>
 			</div>
-			<div class="button-container">
+			<!-- <div class="button-container">
 				<a class="open-form-button take-info center-button" href="#take-info"><span>Узнать подробнее</span></a>
-			</div>
+			</div> -->
 		</div>
 	</div>
 
