--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -11,6 +11,7 @@
 	<meta name="keywords" content="Ж/Б Рама">
 	<meta name="viewport"
 		content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="yandex-verification" content="3b96c8f18808642f" />
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<link rel="stylesheet" href="styles.css?v=3.6">
@@ -150,7 +151,7 @@
 								<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные поселки</span></a>
 									<ul>
 										<li><a href="https://семейный-дв.рф" target="_blank" rel="nofollow">Семейный</a></li>
-										<li><a href="https://экопаркюг.рф" target="_blank" rel="nofollow">Экопарк Юг</a></li>
+										<!-- <li><a href="https://экопаркюг.рф" target="_blank" rel="nofollow">Экопарк Юг</a></li> -->
 										<li><a href="https://экопарксевер.рф" target="_blank" rel="nofollow">Экопарк Север</a></li>
 									</ul>
 								</li>
