add new page in menu

--- a/app/about.html
+++ b/app/about.html
@@ -14,7 +14,7 @@
 	<meta name="yandex-verification" content="3b96c8f18808642f" />
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=3.6">
+	<link rel="stylesheet" href="title.styles.css?v=3.7">
 
 	<meta property="og:title" content="Строительство домов в Хабаровске"/>
 	<meta property="og:description" content="Каменные тёплые дома по цене квартиры - от 2,95 млн. руб. Дом под ключ за 3 месяца. Заводское качество домов и гарантия 50 лет. Ипотека от 1,3%."/>
@@ -22,11 +22,11 @@
 	<meta property="og:image" content="https://kpd100zavod.ru/img/houses-top-image.jpg">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.6">
+	<link rel="stylesheet" href="css/main.min.css?v=3.7">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.6"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.7"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -133,6 +133,7 @@
 										<li><a href="https://экопарксевер.рф" target="_blank" rel="nofollow">Экопарк Север</a></li>
 									</ul>
 								</li>
+								<li class="menu-item"><a href="vdk.html"><span class="menu-item-text">Владивосток</span></a></li>
 								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
 								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 							</ul>
