--- a/app/houses.html
+++ b/app/houses.html
@@ -30,7 +30,7 @@
 	<script src="adaptiveimage.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script type="text/javascript" src="title.js"></script>
-	<link rel="stylesheet" href="styles.css?v=3.6">
+	<link rel="stylesheet" href="styles.css?v=3.7">
 	
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -123,6 +123,7 @@
 										<li><a href="https://экопарксевер.рф" target="_blank" rel="nofollow">Экопарк Север</a></li>
 									</ul>
 								</li>
+								<li class="menu-item"><a href="vdk.html"><span class="menu-item-text">Владивосток</span></a></li>
 								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
 								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 							</ul>
