add new buttons for change city

--- a/app/vdk.html
+++ b/app/vdk.html
@@ -20,11 +20,11 @@
 	<meta property="og:image" content="https://kpd100zavod.ru/img/houses-top-image.jpg">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.13">
+	<link rel="stylesheet" href="css/main.min.css?v=3.14">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.13"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.14"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -141,7 +141,7 @@
 
 						<div class="editable_block-11 widget-7 editorElement layer-type-widget">
 							<div class="body">
-								<div class="title"><h1 class="align-elem">Готовый дом по цене квартиры за 2-3 месяца! Ипотека!<br><span>Дома от 82 м<sup>2</sup> от 3.49 млн руб!</span></h1></div>
+								<div class="title"><h1 class="align-elem">Готовый дом по цене квартиры за 2-3 месяца! Ипотека!<br><span>Дома от 82 м<sup>2</sup> от 3.665 млн руб!</span></h1></div>
 								<div class="text">
 									<div class="layout column layout_8" >
 										<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget head-button" href="#take-consultation" ><span>Узнать варианты ипотечных программ</span></a>
@@ -247,6 +247,19 @@
 		<div class="editorElement layer-type-block ui-droppable block-19" >
 			<div class="editorElement layer-type-block ui-droppable block-20" >
 				<div class="editorElement layer-type-block ui-droppable block-21" >
+
+
+					<div class="choose-city">
+						<div class="container">
+							<h3 class="">Выберите ваш город:</h2>
+							</div>
+							<div class="container button-block">
+								<a class="button-8 widget-5 widget-type-button editorElement layer-type-widget head-button" href="/" ><span>Хабаровск</span></a>
+								<div class="button-8 widget-5 widget-type-button editorElement layer-type-widget head-button hovered" title="Вы находитесь на странице с ценами для города Владивосток"><span>Владивосток</span></div>
+							</div>
+						</div>
+
+
 					<div class="widget-29 path widget-type-path editorElement layer-type-widget"><a href="/">Главная</a> \ Дома</div> 
 					<h2 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Наши дома:</h2>
 					<article class="content-52 content widget-31 widget-type-content editorElement layer-type-widget">
