add new houses & table with prices

--- a/app/about.html
+++ b/app/about.html
@@ -94,15 +94,8 @@
 					<div class="editorElement layer-type-block ui-droppable block-2">
 						<div class="site-name-3 widget-2 widget-type-site_name editorElement layer-type-widget">
 							<a href="/">
-								<div class="sn-wrap">
-									<div class="sn-text">
-										<div class="align-elem">КПД-100</div>
-									</div>
-								</div>
+								<img src="img/logo.png" alt="logo" class="img-responsive">
 							</a>
-						</div>
-						<div class="site-description widget-3 widget-type-site_description editorElement layer-type-widget">
-							<div class="align-elem">Завод домокомплектов</div>
 						</div>
 					</div>
 				</div>
