--- a/app/vdk.html
+++ b/app/vdk.html
@@ -20,11 +20,11 @@
 	<meta property="og:image" content="https://kpd100zavod.ru/img/houses-top-image.jpg">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.14">
+	<link rel="stylesheet" href="css/main.min.css?v=3.16">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.14"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.16"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -91,11 +91,8 @@
 					<div class="editorElement layer-type-block ui-droppable block-2 logo-descr" >
 						<div class="site-name-3 widget-2 widget-type-site_name editorElement layer-type-widget">
 							<a href="/">
-								<div class="sn-wrap"><div class="sn-text"><div class="align-elem">КПД-100</div></div></div>
-							</a> 
-						</div>
-						<div class="site-description widget-3 widget-type-site_description editorElement layer-type-widget">
-							<div class="align-elem">Завод домокомплектов</div>
+								<img src="img/logo.png" alt="logo" class="img-responsive">
+							</a>
 						</div>
 					</div>
 				</div>
@@ -594,7 +591,7 @@
 
 								<div class="description">
 									<div class="align-elem">
-										<h2 class="sub-descr">Мансардный дом</h2>
+										<h2 class="sub-descr">Мансардные дома</h2>
 									</div>
 								</div>
 
@@ -717,6 +714,123 @@
 													<span class="title"><span class="align-elem">Общая площадь 117кв. м.</span></span>
 												</div>
 											</div>
+
+											<div class="item-outer">
+													<div class="item">
+
+														<div class="tabs">
+															<div class="tab-contents">
+
+																<div class="tab-content active" data-tab="1">
+																	<a class="image fancybox" href="img/houses/attic_3/1.jpg?v=1.10" data-fancybox="house-attic_3">
+																		<div class="house-price"><span>5.73 млн ₽</span></div>
+																		<div class="item-label"></div>
+																		<span class="img-convert" style="background: url(img/houses/attic_3/sm/1.jpg?v=1.10);"></span>
+																	</a>
+																</div>
+
+																<div class="tab-content" data-tab="2">
+																	<a class="image fancybox" href="img/houses/attic_3/2.jpg" data-fancybox="house-attic_3">
+																		<div class="house-price"><span>5.73 млн ₽</span></div>
+																		<div class="item-label"></div>
+																		<span class="img-convert" style="background: url(img/houses/attic_3/sm/2.jpg?v=1.10);"></span>
+																	</a>
+																</div>
+
+																<div class="tab-content" data-tab="3">
+																	<a class="image fancybox" href="img/houses/attic_3/3.jpg" data-fancybox="house-attic_3">
+																		<div class="house-price"><span>5.73 млн ₽</span></div>
+																		<div class="item-label"></div>
+																		<span class="img-convert" style="background: url(img/houses/attic_3/sm/3.jpg?v=1.10);"></span>
+																	</a>
+																</div>
+
+															</div>
+
+															<div class="tab-btns">
+																<a href="#" class="tab-btn active" data-tab="1">
+																	<img src="img/houses/attic_3/sm/1.jpg" alt="icon" class="img-responsive">
+																</a>
+																<a href="#" class="tab-btn" data-tab="2">
+																	<img src="img/houses/attic_3/sm/2.jpg" alt="icon" class="img-responsive">
+																</a>
+																<a href="#" class="tab-btn" data-tab="3">
+																	<img src="img/houses/attic_3/sm/3.jpg" alt="icon" class="img-responsive">
+																</a>
+															</div>
+
+														</div>
+
+														<div class="d-none">
+															<a class="image fancybox" href="img/houses/attic_3/2.jpg?v=1.10" data-fancybox="house-attic_3" data-thumb="img/houses/attic_3/2.jpg?v=1.10"></a>
+															<a class="image fancybox" href="img/houses/attic_3/3.jpg?v=1.10" data-fancybox="house-attic_3" data-thumb="img/houses/attic_3/3.jpg?v=1.10"></a>
+															<a class="image fancybox" href="img/houses/attic_3/4.jpg?v=1.10" data-fancybox="house-attic_3" data-thumb="img/houses/attic_3/4.jpg?v=1.10"></a>
+															<a class="image fancybox" href="img/houses/attic_3/scheme.jpg?v=1.10" data-fancybox="house-attic_3" data-thumb="img/houses/attic_3/scheme.jpg?v=1.10"></a>
+														</div>
+														<span class="title"><span class="align-elem">Общая площадь 147кв. м.</span></span>
+														<!-- <div class="text"><div class="align-elem"><p>Площадь дома 117,02кв. м.</p></div></div> -->
+													</div>
+												</div>
+
+
+
+												<div class="item-outer">
+													<div class="item">
+
+														<div class="tabs">
+															<div class="tab-contents">
+
+																<div class="tab-content active" data-tab="1">
+																	<a class="image fancybox" href="img/houses/attic_4/1.jpg?v=1.10" data-fancybox="house-attic_4">
+																		<div class="house-price"><span>7.1 млн ₽</span></div>
+																		<div class="item-label"></div>
+																		<span class="img-convert" style="background: url(img/houses/attic_4/sm/1.jpg?v=1.10);"></span>
+																	</a>
+																</div>
+
+																<div class="tab-content" data-tab="2">
+																	<a class="image fancybox" href="img/houses/attic_4/2.jpg" data-fancybox="house-attic_4">
+																		<div class="house-price"><span>7.1 млн ₽</span></div>
+																		<div class="item-label"></div>
+																		<span class="img-convert" style="background: url(img/houses/attic_4/sm/2.jpg?v=1.10);"></span>
+																	</a>
+																</div>
+
+																<div class="tab-content" data-tab="3">
+																	<a class="image fancybox" href="img/houses/attic_4/3.jpg" data-fancybox="house-attic_4">
+																		<div class="house-price"><span>7.1 млн ₽</span></div>
+																		<div class="item-label"></div>
+																		<span class="img-convert" style="background: url(img/houses/attic_4/sm/3.jpg?v=1.10);"></span>
+																	</a>
+																</div>
+
+															</div>
+
+															<div class="tab-btns">
+																<a href="#" class="tab-btn active" data-tab="1">
+																	<img src="img/houses/attic_4/sm/1.jpg" alt="icon" class="img-responsive">
+																</a>
+																<a href="#" class="tab-btn" data-tab="2">
+																	<img src="img/houses/attic_4/sm/2.jpg" alt="icon" class="img-responsive">
+																</a>
+																<a href="#" class="tab-btn" data-tab="3">
+																	<img src="img/houses/attic_4/sm/3.jpg" alt="icon" class="img-responsive">
+																</a>
+															</div>
+
+														</div>
+
+														<div class="d-none">
+															<a class="image fancybox" href="img/houses/attic_4/2.jpg?v=1.10" data-fancybox="house-attic_4" data-thumb="img/houses/attic_4/2.jpg?v=1.10"></a>
+															<a class="image fancybox" href="img/houses/attic_4/3.jpg?v=1.10" data-fancybox="house-attic_4" data-thumb="img/houses/attic_4/3.jpg?v=1.10"></a>
+															<a class="image fancybox" href="img/houses/attic_4/4.jpg?v=1.10" data-fancybox="house-attic_4" data-thumb="img/houses/attic_4/4.jpg?v=1.10"></a>
+															<a class="image fancybox" href="img/houses/attic_4/5.jpg?v=1.10" data-fancybox="house-attic_4" data-thumb="img/houses/attic_4/5.jpg?v=1.10"></a>
+															<a class="image fancybox" href="img/houses/attic_4/scheme.jpg?v=1.10" data-fancybox="house-attic_4" data-thumb="img/houses/attic_4/scheme.jpg?v=1.10"></a>
+														</div>
+														<span class="title"><span class="align-elem">Общая площадь 187кв. м.</span></span>
+														<!-- <div class="text"><div class="align-elem"><p>Площадь дома 117,02кв. м.</p></div></div> -->
+													</div>
+												</div>
 
 										</div>
 									</div>
