--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -15,7 +15,7 @@
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<link rel="stylesheet" href="styles.css?v=3.7">
-	<link rel="stylesheet" href="title.styles.css?v=3.8">
+	<link rel="stylesheet" href="title.styles.css?v=3.7">
 
 	<meta property="og:title" content="Строительство домов в Хабаровске"/>
 	<meta property="og:description" content="Каменные тёплые дома по цене квартиры - от 2,95 млн. руб. Дом под ключ за 3 месяца. Заводское качество домов и гарантия 50 лет. Ипотека от 1,3%."/>
@@ -23,11 +23,11 @@
 	<meta property="og:image" content="https://kpd100zavod.ru/img/houses-top-image.jpg">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.8">
+	<link rel="stylesheet" href="css/main.min.css?v=3.7">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.8"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.7"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -116,16 +116,9 @@
 				<div class="layout column layout_5">
 					<div class="editorElement layer-type-block ui-droppable block-2">
 						<div class="site-name-3 widget-2 widget-type-site_name editorElement layer-type-widget">
-							<a href="index.html">
-								<div class="sn-wrap">
-									<div class="sn-text">
-										<div class="align-elem">КПД-100</div>
-									</div>
-								</div>
+							<a href="/">
+								<img src="img/logo.png" alt="logo" class="img-responsive">
 							</a>
-						</div>
-						<div class="site-description widget-3 widget-type-site_description editorElement layer-type-widget">
-							<div class="align-elem">Завод домокомплектов</div>
 						</div>
 					</div>
 				</div>
