--- a/app/vdk.html
+++ b/app/vdk.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="robots" content="all">
 	<title>Строительство домов 👌, по цене квартиры. Владивосток</title>
-	<meta name="description" content="Строительство домов во Владивостоке. Если Вам нужно качественно, быстро и по разумной цене построить дом под ключ и гарантией на наши дома от 50 лет. Строительная компания КПД-100 Завод домокомплектов предлагает для Вас дома от 2,1 млн руб!">
+	<meta name="description" content="Строительство домов во Владивостоке. Если Вам нужно качественно, быстро и по разумной цене построить дом под ключ и гарантией на наши дома от 50 лет. Строительная компания КПД-100 Завод домокомплектов предлагает для Вас дома от 3.665 млн руб!">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="yandex-verification" content="3b96c8f18808642f" />
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="title.styles.css?v=3.12">
 
 	<meta property="og:title" content="Строительство домов во Владивостоке"/>
-	<meta property="og:description" content="Каменные тёплые дома по цене квартиры - от 2,95 млн. руб. Дом под ключ за 3 месяца. Заводское качество домов и гарантия 50 лет. Ипотека от 1,3%."/>
+	<meta property="og:description" content="Каменные тёплые дома по цене квартиры - от 3.665 млн. руб. Дом под ключ за 3 месяца. Заводское качество домов и гарантия 50 лет. Ипотека от 1,3%."/>
 	<meta property="og:url" content="https://kpd100zavod.ru"/>
 	<meta property="og:image" content="https://kpd100zavod.ru/img/houses-top-image.jpg">
 
@@ -120,7 +120,7 @@
 										<li><a href="https://экопарксевер.рф" target="_blank" rel="nofollow">Экопарк Север</a></li>
 									</ul>
 								</li>
-								<li class="menu-item"><a href="vdk.html"><span class="menu-item-text">Владивосток</span></a></li>
+								<li class="menu-item"><a href="commercial-vdk.html"><span class="menu-item-text">Коммерческое строительство</span></a></li>
 								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
 								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 							</ul>
