--- a/app/dealers.html
+++ b/app/dealers.html
@@ -134,7 +134,7 @@
 									<li><a href="https://экопарксевер.рф" target="_blank" rel="nofollow">Экопарк Север</a></li>
 								</ul>
 							</li>
-							<li class="menu-item"><a href="vdk.html"><span class="menu-item-text">Владивосток</span></a></li>
+							<li class="menu-item"><a href="commercial-khv.html"><span class="menu-item-text">Коммерческое строительство</span></a></li>
 							<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
 							<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 						</ul>
