--- a/app/index.html
+++ b/app/index.html
@@ -120,7 +120,7 @@
 										<li><a href="https://экопарксевер.рф" target="_blank" rel="nofollow">Экопарк Север</a></li>
 									</ul>
 								</li>
-								<li class="menu-item"><a href="vdk.html"><span class="menu-item-text">Владивосток</span></a></li>
+								<li class="menu-item"><a href="commercial-khv.html"><span class="menu-item-text">Коммерческое строительство</span></a></li>
 								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
 								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 							</ul>
@@ -1930,7 +1930,8 @@
 
 			<div>
 				<h3>Сельская ипотека 2,7% на СТРОИТЕЛЬСТВО ДОМА в сельской местности от Россельхозбанка</h3>
-				<p>Пожалуй, это лучшая ипотечная программа для большинства жителей нашего региона!</p>
+				<p><b>К сожалению, на данный момент эта программа не работает</b></p>
+				<!-- <p>Пожалуй, это лучшая ипотечная программа для большинства жителей нашего региона!</p>
 				<p><b>По данной ипотечной программе нет ограничения по возрасту, минимальный первоначальный платеж, не требуется залоговое имущество либо Поручитель на период строительства.</b></p>
 				<p>Для Подрядной организации условия же по данной программе более жесткие. Подрядчик по данной программе строит дом на свои средства. От Заказчика Подрядчик получает только часть средств – 50%, а остаток 50% – только после сдачи дома Заказчику, при чем дом сдается Заказчику обязательно с отделкой, сантехникой – готовый для проживания.</p>
 				<p>Строить дома по такой схеме может позволить себе только компания, у которой имеется свое производство.</p>
@@ -1946,7 +1947,7 @@
 				</ul>
 				<p><b>Поскольку строительство дома по данной программе осуществляется за счет средств Подрядной организации – количество заявок в месяц – ограничено.</b></p>
 				<p><b>У вас нет земельного участка?</b></p>
-				<p>Мы поможем купить его и включить в стоимость ипотечного кредита!</p>
+				<p>Мы поможем купить его и включить в стоимость ипотечного кредита!</p> -->
 				<h3>Ипотека от 4,9% на СТРОИТЕЛЬСТВО или ГОТОВЫЙ ДОМ в городе или сельской местности</h3>
 				<!-- <img src="img/mortgage.jpg" alt="ипотека" class="img-responsive"> -->
 				<p>Наш партнёр Почта Банк поможет оформить кредит на покупку загородного дома на сумму до 3 млн ₽.</p>
